# mafiamaneger

./: .replit  Pasted-Certainly-The-error-message-you-re-encountering-is-Database-error-during-login-psycopg2-err-1728565077649.txt  Pasted-Circular-dependencies-in-SQLAlchemy-models-occur-when-two-tables-reference-each-other-through-foreig-1728072313484.txt  Pasted-ERROR-app-Exception-on-admin-dashboard-GET-Traceback-most-recent-call-last-File-home-runne-1728295354721.txt  Pasted-ERROR-app-Exception-on-admin-users-GET-Traceback-most-recent-call-last-File-home-runner-Ma-1728566119634.txt  Pasted-Project-Title-Mafia-Manager-Web-Application-for-Tracking-Player-and-Faction-Statistics-in-The-G-1728044870432.txt  Pasted-The-error-message-you-re-encountering-typically-suggests-that-the-SQLAlchemy-instance-is-not-prope-1728563950278.txt  StatisticsDashboard.tsx  app.log.1  app.log.2  app.log.4  app.py  models.py  pyproject.toml
migrations/versions/: 01cebf8a5eb8_add_is_admin_column_to_user_model.py  039176608ff6_add_created_at_column_to_user_model.py  5174f55f7158_add_is_admin_column_to_user_model.py  9263e2189b5e_add_created_at_column_to_user_model.py  d7de2a8aef39_add_created_at_column_to_user_model.py  da66b9ccc95b_add_created_at_column_to_user_model.py
routes/: admin.py  auth.py  factions.py  stats.py
static/js/: StatisticsDashboard.js  auth.js  factions.js  feature_access.js  number_formatting.js  stats.js
templates/: base.html  dashboard.html  index.html  login.html  register.html
templates/admin/: dashboard.html  edit_user.html  faction_management.html  logs.html  (+2 more)
