[tool.poetry]
name = "repl-nix-mafiamanager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask = "^3.0.3"
flask-login = "^0.6.3"
marshmallow = "^3.22.0"
flask-migrate = "^4.0.7"
werkzeug = "^3.0.4"
sqlalchemy = "^2.0.35"
flask-limiter = "^3.8.0"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
